--- a/css/style.css
+++ b/css/style.css
@@ -706,7 +706,7 @@ nav ul li a{
 }
 
 /* Registration Form */
-
+/* 
 .register-body{
     background-color: #101010;
     background-repeat: no-repeat;
@@ -817,4 +817,4 @@ nav ul li a{
 .stars i{
     font-size: 20px;
     color: rgb(197, 167, 44);
-}
+} */    
